Připsání Fyziky do seznamu

--- a/zkouska.html
+++ b/zkouska.html
@@ -14,7 +14,7 @@
         <li>Mám hlad</li>
         <li>Chce se mi spinkat</li>
         <li>Asi brzo hodím napíka</li>
-        <li>Měla bych se učit Češtinu, ale asi usnu ve vlaku a odjedu až na severní pól</li>
+        <li>Měla bych se učit Češtinu a Fyziku, ale asi usnu ve vlaku a odjedu až na severní pól</li>
     </ol>
 </body>
 </html>
